src/y.output
State 1 conflicts: 2 shift/reduce
State 17 conflicts: 1 shift/reduce
State 24 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: S FINAL_JSON
    2  | %empty

    3 FINAL_JSON: START_JSON JSON STOP_JSON
    4           | %empty

    5 JSON: JSON COMMA JSON
    6     | TEXT TWO_DOTS FINAL_JSON
    7     | TEXT TWO_DOTS FINAL_LIST
    8     | TEXT TWO_DOTS EXP

    9 LIST: FINAL_LIST
   10     | EXP
   11     | LIST COMMA LIST
   12     | EMPTY_LIST

   13 FINAL_LIST: START_LIST LIST END_LIST

   14 EXP: TEXT
   15    | NUM
   16    | NUM_FLOAT


Terminals, with rules where they appear

$end (0) 0
error (256)
START_JSON (258) 3
STOP_JSON (259) 3
TWO_DOTS (260) 6 7 8
TEXT (261) 6 7 8 14
NUM (262) 15
NUM_FLOAT (263) 16
COMMA (264) 5 11
START_LIST (265) 13
END_LIST (266) 13
EMPTY_LIST (267) 12


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
S (14)
    on left: 1 2, on right: 0 1
FINAL_JSON (15)
    on left: 3 4, on right: 1 6
JSON (16)
    on left: 5 6 7 8, on right: 3 5
LIST (17)
    on left: 9 10 11 12, on right: 11 13
FINAL_LIST (18)
    on left: 13, on right: 7 9
EXP (19)
    on left: 14 15 16, on right: 8 10


State 0

    0 $accept: . S $end

    $default  reduce using rule 2 (S)

    S  go to state 1


State 1

    0 $accept: S . $end
    1 S: S . FINAL_JSON

    $end        shift, and go to state 2
    START_JSON  shift, and go to state 3

    $end        [reduce using rule 4 (FINAL_JSON)]
    START_JSON  [reduce using rule 4 (FINAL_JSON)]

    FINAL_JSON  go to state 4


State 2

    0 $accept: S $end .

    $default  accept


State 3

    3 FINAL_JSON: START_JSON . JSON STOP_JSON

    TEXT  shift, and go to state 5

    JSON  go to state 6


State 4

    1 S: S FINAL_JSON .

    $default  reduce using rule 1 (S)


State 5

    6 JSON: TEXT . TWO_DOTS FINAL_JSON
    7     | TEXT . TWO_DOTS FINAL_LIST
    8     | TEXT . TWO_DOTS EXP

    TWO_DOTS  shift, and go to state 7


State 6

    3 FINAL_JSON: START_JSON JSON . STOP_JSON
    5 JSON: JSON . COMMA JSON

    STOP_JSON  shift, and go to state 8
    COMMA      shift, and go to state 9


State 7

    6 JSON: TEXT TWO_DOTS . FINAL_JSON
    7     | TEXT TWO_DOTS . FINAL_LIST
    8     | TEXT TWO_DOTS . EXP

    START_JSON  shift, and go to state 3
    TEXT        shift, and go to state 10
    NUM         shift, and go to state 11
    NUM_FLOAT   shift, and go to state 12
    START_LIST  shift, and go to state 13

    $default  reduce using rule 4 (FINAL_JSON)

    FINAL_JSON  go to state 14
    FINAL_LIST  go to state 15
    EXP         go to state 16


State 8

    3 FINAL_JSON: START_JSON JSON STOP_JSON .

    $default  reduce using rule 3 (FINAL_JSON)


State 9

    5 JSON: JSON COMMA . JSON

    TEXT  shift, and go to state 5

    JSON  go to state 17


State 10

   14 EXP: TEXT .

    $default  reduce using rule 14 (EXP)


State 11

   15 EXP: NUM .

    $default  reduce using rule 15 (EXP)


State 12

   16 EXP: NUM_FLOAT .

    $default  reduce using rule 16 (EXP)


State 13

   13 FINAL_LIST: START_LIST . LIST END_LIST

    TEXT        shift, and go to state 10
    NUM         shift, and go to state 11
    NUM_FLOAT   shift, and go to state 12
    START_LIST  shift, and go to state 13
    EMPTY_LIST  shift, and go to state 18

    LIST        go to state 19
    FINAL_LIST  go to state 20
    EXP         go to state 21


State 14

    6 JSON: TEXT TWO_DOTS FINAL_JSON .

    $default  reduce using rule 6 (JSON)


State 15

    7 JSON: TEXT TWO_DOTS FINAL_LIST .

    $default  reduce using rule 7 (JSON)


State 16

    8 JSON: TEXT TWO_DOTS EXP .

    $default  reduce using rule 8 (JSON)


State 17

    5 JSON: JSON . COMMA JSON
    5     | JSON COMMA JSON .

    COMMA  shift, and go to state 9

    COMMA     [reduce using rule 5 (JSON)]
    $default  reduce using rule 5 (JSON)


State 18

   12 LIST: EMPTY_LIST .

    $default  reduce using rule 12 (LIST)


State 19

   11 LIST: LIST . COMMA LIST
   13 FINAL_LIST: START_LIST LIST . END_LIST

    COMMA     shift, and go to state 22
    END_LIST  shift, and go to state 23


State 20

    9 LIST: FINAL_LIST .

    $default  reduce using rule 9 (LIST)


State 21

   10 LIST: EXP .

    $default  reduce using rule 10 (LIST)


State 22

   11 LIST: LIST COMMA . LIST

    TEXT        shift, and go to state 10
    NUM         shift, and go to state 11
    NUM_FLOAT   shift, and go to state 12
    START_LIST  shift, and go to state 13
    EMPTY_LIST  shift, and go to state 18

    LIST        go to state 24
    FINAL_LIST  go to state 20
    EXP         go to state 21


State 23

   13 FINAL_LIST: START_LIST LIST END_LIST .

    $default  reduce using rule 13 (FINAL_LIST)


State 24

   11 LIST: LIST . COMMA LIST
   11     | LIST COMMA LIST .

    COMMA  shift, and go to state 22

    COMMA     [reduce using rule 11 (LIST)]
    $default  reduce using rule 11 (LIST)
